fixed stretched related images

--- a/src/components/related/related.css
+++ b/src/components/related/related.css
@@ -30,6 +30,10 @@
     padding-bottom: 5px;
 }
 
+.related_image {
+    max-width: 80px;
+}
+
 .related_info p {
     margin: 0;
 }
